<resources>
    <string name="app_name">Gaut</string>
    <string name="email_text">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">   Iniciar sesión   </string>
    <string name="register">    Registrarse    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cars">Vehículos</string>
    <string name="menu_newcar">Crear Vehículo</string>

    <string name="home_second">Home Second</string>
    <string name="placa">ABC 123</string>
    <string name="propietario">Propietario:</string>
    <string name="jhon_due">Jhon Due</string>
    <string name="marca">Marca:</string>
    <string name="linea">Linea:</string>
    <string name="modelo">Modelo:</string>
    <string name="datos_veh_culo">Datos Vehículo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Toastbtn">No hay vehículo que mostrar</string>
    <string name="confirma_la_contrase_a">Confirma la contraseña</string>
    <string name="Name_App">Gaut</string>
    <string name="nombre_de_la_empresa">Nombre de la empresa</string>
    <string name="AlertDialog_DE">¿Desea eliminar el vehículo?</string>
    <string name="create_car">Crea un vehículo para empezar a usar la app</string>
    <string name="search_car">Buscar Vehículo</string>
</resources>
