<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon_silhouette"
            android:iconTint="@color/GrayWhite"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cars"
            android:icon="@drawable/ic_car"
            android:title="@string/menu_cars"/>
        <item
            android:id="@+id/nav_create_car"
            android:icon="@drawable/ic_menu_plus"
            android:title="@string/menu_newcar" />
        <item
            android:id="@+id/nav_finder"
            android:icon="@drawable/ic_search"
            android:title="@string/search_car"
            />
    </group>
</menu>
