<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".cars">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nuevo_carro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:clickable="true"
        android:src="@drawable/home_icon_silhouette"
        android:focusable="true"
        android:layout_margin="16dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/common_google_signin_btn_icon_light"
        app:backgroundTint="#E22323"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/common_google_signin_btn_icon_light_normal"
        android:focusable="true" />

    <TextView
        android:id="@+id/Placa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/placa"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/Propietario_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="148dp"
        android:text="@string/propietario"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/propietario_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="148dp"
        android:text="@string/jhon_due"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="184dp"
        android:text="@string/marca"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Marca_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="184dp"
        android:text="Chevrolet"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Linea_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="220dp"
        android:text="Linea:"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Modelo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="256dp"
        android:text="Modelo:"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Tittle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="84dp"
        android:text="Datos Vehículos"
        android:textColor="#020202"
        android:textSize="30sp" />


</FrameLayout>